# wide-wallpaper-scraping

./: .aider.conf.yml  .copilot-cli.yml  .cursorrules  .editorconfig  .env.example  .gitignore  .npmignore  .prettierignore  .windsurfrules  DELIVERABLES.md  LICENSE  README.md  biome.json  mcp.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  gthb-mcp-global-settings
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/copilot/: workspace.yml
.github/workflows/: ci-python.yml  ci.yml  release.yml  security.yml
.husky/: pre-commit  pre-push
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CONVENTIONS.md  DEPLOYMENT.md  FEATURES.md  MCP_SETUP.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md
scripts/: audit-check.js  check-coverage.js  generate-component.js  setup.js  validate-build.js  verify-dist.js
src/: index.ts
src/config/: default.ts
src/types/: config.ts
src/utils/: errors.ts  greet.ts  logger.ts  math.ts  validation.ts
tests/: greet.test.ts  math.test.ts  test_adapters_smoke.py  test_aspect_ratio.py  test_config.py  test_dedup.py
wallpaperbot/: __init__.py  cli.py  config.py  db.py  dedup.py  image_ops.py  models.py  robots.py  utils.py  wallpaper_setter.py
wallpaperbot/adapters/: __init__.py  base.py  stub_sources.py  unsplash.py
